crates/jsonschema-macros/tests/ui/regex_engine_unsupported_pattern.rs
#[jsonschema::validator(
    schema = r#"{"type":"string","pattern":"^(?!eo:)"}"#,
    pattern_options = {
        engine = regex,
    }
)]
struct Validator;

fn main() {}
